hphp/test/zend/good/ext/date/tests/bug35887.php
<?php
date_default_timezone_set("UTC");

echo date(DATE_ISO8601, strtotime('2006-1-6T0:0:0-8:0')) . "\n";

?>